--- a/public/auth/signup.html
+++ b/public/auth/signup.html
@@ -13,6 +13,7 @@
       window.location.href = '/';
     }
   </script>
+  <div id="toastContainer" class="fixed bottom-4 right-4 space-y-2 z-50"></div>
 <!-- public/views/signup.html -->
 <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md">
   <h2 class="text-2xl font-bold mb-6 text-center text-blue-600">Create an Account</h2>
@@ -27,6 +28,42 @@
   </p>
 </div>
 <script>
+  function showToast(msg, type = 'success') {
+  const icons = {
+    success: '✅',
+    error: '❌',
+    info: 'ℹ️',
+    warning: '⚠️'
+  };
+
+  const bgColors = {
+    success: 'bg-green-500',
+    error: 'bg-red-500',
+    info: 'bg-blue-500',
+    warning: 'bg-yellow-500 text-black'
+  };
+
+  const icon = icons[type] || '';
+  const bgColor = bgColors[type] || 'bg-gray-500';
+
+  const t = document.createElement('div');
+  t.innerHTML = `<span class="mr-2">${icon}</span>${msg}`;
+  t.className = `
+    flex items-center
+    px-4 py-2 mb-2
+    rounded shadow-md
+    text-white text-sm font-medium
+    animate-slide-in
+    ${bgColor}
+  `.trim().replace(/\s+/g, ' ');
+
+  const container = document.getElementById('toastContainer');
+  if (container) {
+    container.append(t);
+    setTimeout(() => t.remove(), 3000);
+  }
+}
+
   const form = document.querySelector('form');
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
@@ -43,9 +80,11 @@
         const data = await response.json();
         console.log(data);
     if (response.ok) {
+      showToast('Registration successful', 'success');
       window.location.href = '/login';
     }
     if (!response.ok) {
+      showToast(data.message, 'error');
       alert(data.message);
     }
 
