--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
   <header class="bgvideo h-screen flex items-center justify-center">
     <!-- Background video (with audio) -->
     <video autoplay loop playsinline class="absolute inset-0 w-auto h-full min-w-full min-h-full  z-[-1]">
-      <source src="./imagesandvideos/luxurystay-intro.mp4" type="video/mp4" />
+      <source src="/imagesandvideos/luxurystay-intro.mp4" type="video/mp4" />
     </video>
     <!-- Overlay Content -->
     <div class="relative bg-gray-500 bg-opacity-50">
@@ -137,11 +137,11 @@
       <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay</h2>
     </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/5.png" alt="Fine Dining"
+        <img src="/imagesandvideos/5.png" alt="Fine Dining"
              class="w-full h-96  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/6.png" alt="Fine Dining"
+        <img src="/imagesandvideos/6.png" alt="Fine Dining"
              class="w-full h-96  hover:scale-105 transition-transform duration-300">
       </div>
     <div class="flex justify-center text-white gallery-item overflow-hidden">
@@ -150,19 +150,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/1.jfif" alt="Luxury Room"
+        <img src="/imagesandvideos/1.jfif" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/2.jfif" alt="Hotel Lobby"
+        <img src="/imagesandvideos/2.jfif" alt="Hotel Lobby"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/3.jfif" alt="Poolside"
+        <img src="/imagesandvideos/3.jfif" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/4.jfif" alt="Fine Dining"
+        <img src="/imagesandvideos/4.jfif" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -174,27 +174,27 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/gym_uncut.jpg" alt="Luxury Gym"
+        <img src="/imagesandvideos/gym_uncut.jpg" alt="Luxury Gym"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/gym_1_uncut.jpg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/gym_1_uncut.jpg" alt="Hotel Lobby"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/gym_2_uncut.jpg" alt="Poolside"
+        <img src="/imagesandvideos/gym_2_uncut.jpg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/gym_3_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/gym_3_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
             <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/gym_4_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/gym_4_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
             <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/gym_5_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/gym_5_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -206,19 +206,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/bathroom_uncut.jpg" alt="Luxury Room"
+        <img src="/imagesandvideos/bathroom_uncut.jpg" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/bathroom_1_uncut.jpg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/bathroom_1_uncut.jpg" alt="Hotel Lobby"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/bathroom_2_uncut.jpg" alt="Poolside"
+        <img src="/imagesandvideos/bathroom_2_uncut.jpg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/bathroom_3_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/bathroom_3_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -230,19 +230,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/Dinein_uncut.jpg" alt="Luxury Room"
+        <img src="/imagesandvideos/Dinein_uncut.jpg" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/Dinein_1_uncut.jpg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/Dinein_1_uncut.jpg" alt="Hotel Lobby"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/Dinein_2_uncut.jpg" alt="Poolside"
+        <img src="/imagesandvideos/Dinein_2_uncut.jpg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/Dinein_3_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/Dinein_3_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -254,19 +254,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/kitchen_uncut.jpg" alt="Luxury Room"
+        <img src="/imagesandvideos/kitchen_uncut.jpg" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/kitchen_1_uncut.jpg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/kitchen_1_uncut.jpg" alt="Hotel Lobby"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/kitchen_2_uncut.jpg" alt="Poolside"
+        <img src="/imagesandvideos/kitchen_2_uncut.jpg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/kitchen_3_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/kitchen_3_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -278,19 +278,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/massage_uncut.jpg" alt="Luxury Room"
+        <img src="/imagesandvideos/massage_uncut.jpg" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/massage_1_uncut.jpg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/massage_1_uncut.jpg" alt="Hotel Lobby"
              class="w-full h-80 hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/massage_2_uncut.jpg" alt="Poolside"
+        <img src="/imagesandvideos/massage_2_uncut.jpg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/massage_3_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/massage_3_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -302,19 +302,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/steam_uncut.jpg" alt="Luxury Room"
+        <img src="/imagesandvideos/steam_uncut.jpg" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/steam_1_uncut.jpg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/steam_1_uncut.jpg" alt="Hotel Lobby"
              class="w-full h-80 hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/steam_2_uncut.jpg" alt="Poolside"
+        <img src="/imagesandvideos/steam_2_uncut.jpg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/steam_3_uncut.jpg" alt="Fine Dining"
+        <img src="/imagesandvideos/steam_3_uncut.jpg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -326,19 +326,19 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="../imagesandvideos/security_cut.jpeg" alt="Luxury Room"
+        <img src="/imagesandvideos/security_cut.jpeg" alt="Luxury Room"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/security_1_cut.jpeg" alt="Hotel Lobby"
+        <img src="/imagesandvideos/security_1_cut.jpeg" alt="Hotel Lobby"
              class="w-full h-80 hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/security_2_cut.jpeg" alt="Poolside"
+        <img src="/imagesandvideos/security_2_cut.jpeg" alt="Poolside"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/security_3_cut.jpeg" alt="Fine Dining"
+        <img src="/imagesandvideos/security_3_cut.jpeg" alt="Fine Dining"
              class="w-full h-80  hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
@@ -348,7 +348,7 @@
       <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Mosque</h2>
     </div>
       <div class="overflow-hidden shadow-lg gallery-item">
-        <img src="./imagesandvideos/prayer_cut.jpeg" alt="Fine Dining"
+        <img src="/imagesandvideos/prayer_cut.jpeg" alt="Fine Dining"
              class="w-full h-96  hover:scale-105 transition-transform duration-300">
       </div>
   </section>
@@ -360,7 +360,7 @@
     &copy; 2025 LuxuryStay Hospitality. All rights reserved.
   </footer>
 
-  <script src="./js/socketClient.js"></script>
+  <script src="/js/socketClient.js"></script>
   <script type="module">
     const user = localStorage.getItem('user');
     const role = user ? JSON.parse(user).role : null;
