--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="/css/global.css">
   <title>LuxuryStay</title>
 </head>
 <body class="bg-black">
