--- a/public/index.html
+++ b/public/index.html
@@ -151,19 +151,19 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/1.jfif" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/2.jfif" alt="Hotel Lobby"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/3.jfif" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/4.jfif" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -175,27 +175,27 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_uncut.jpg" alt="Luxury Gym"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_1_uncut.jpg" alt="Hotel Lobby"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_2_uncut.jpg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_3_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
             <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_4_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
             <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_5_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -207,19 +207,19 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/bathroom_uncut.jpg" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/bathroom_1_uncut.jpg" alt="Hotel Lobby"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/bathroom_2_uncut.jpg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/bathroom_3_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -231,19 +231,19 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/Dinein_uncut.jpg" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/Dinein_1_uncut.jpg" alt="Hotel Lobby"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/Dinein_2_uncut.jpg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/Dinein_3_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -255,19 +255,19 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/kitchen_uncut.jpg" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/kitchen_1_uncut.jpg" alt="Hotel Lobby"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/kitchen_2_uncut.jpg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/kitchen_3_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -279,7 +279,7 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/massage_uncut.jpg" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/massage_1_uncut.jpg" alt="Hotel Lobby"
@@ -287,11 +287,11 @@
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/massage_2_uncut.jpg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/massage_3_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -303,7 +303,7 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/steam_uncut.jpg" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/steam_1_uncut.jpg" alt="Hotel Lobby"
@@ -311,11 +311,11 @@
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/steam_2_uncut.jpg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/steam_3_uncut.jpg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -327,7 +327,7 @@
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/security_cut.jpeg" alt="Luxury Room"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/security_1_cut.jpeg" alt="Hotel Lobby"
@@ -335,11 +335,11 @@
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/security_2_cut.jpeg" alt="Poolside"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/security_3_cut.jpeg" alt="Fine Dining"
-             class="w-full h-80  hover:scale-105 transition-transform duration-300">
+             class="w-full h-80 rounded hover:scale-105 transition-transform duration-300">
       </div>
       <!-- …more cards… -->
     </div>
@@ -392,10 +392,9 @@ btn?.addEventListener('click', () => {
       { href: '/', label: 'Home' },
       ...(token
         ? [
-            role === 'guest'        ? { href:'/user/rooms',      label:'Rooms' } : null,
-            role === 'guest'        ? { href:'/user/bookings',   label:'My Bookings' } : null,
-            role === 'guest'        ? { href:'/user/feedback',    label:'FeedBack' } : null,
-            role === 'guest'        ? { href:'/user/invoice',    label:'Get&Load Invoice' } : null,
+            role === 'guest'        ? { href:'/guest-rooms',      label:'Rooms' } : null,
+            role === 'guest'        ? { href:'/guest-bookings',   label:'My Bookings' } : null,
+            role === 'guest'        ? { href:'/guest-issues',    label:'Report' } : null,
             role === 'receptionist' ? { href:'/recept-bookings',label:'Bookings' } : null,
             role === 'receptionist' ? { href:'/recept-tasks', label:'Tasks' } : null,
             role === 'receptionist' ? { href:'/recept-invoices', label:'Invoices' } : null,
