--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/global.css">
   <title>LuxuryStay</title>
 </head>
-<body class="bg-black">
+<body>
   <script>
     if (!localStorage.getItem('token')) {
       window.location.href = '/login';
@@ -65,46 +65,46 @@
   </header>
 
   <!-- Gallery Section -->
-  <section id="gallery" class="mx-auto space-y-8 bg-black my-20">
-  <section id="story" class="max-w-5xl mx-auto my-16 px-4 text-white space-y-12 gallery-item overflow-hidden">
-    <h2 class="text-4xl font-bold text-center">Our Story</h2>
+  <section id="gallery" class="mx-auto space-y-8 text-black my-20">
+  <section id="story" class="max-w-5xl mx-auto my-16 px-4 text-black space-y-12 gallery-item overflow-hidden">
+    <h2 class="text-4xl font-bold text-blue-600 text-center">Our Story</h2>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">The Origin of the Name “LuxuryStay”</h3>
+      <h3 class="text-2xl font-semibold text-blue-600 mb-2 transition-transform duration-300">The Origin of the Name “LuxuryStay”</h3>
       <p class="text-lg leading-relaxed transition-transform duration-300">
         When Muhammad Ilyas first envisioned a place where guests could experience unparalleled comfort without losing the warmth of home, he chose the name <strong>LuxuryStay</strong>. “Luxury” reflects the high standards and opulence—the polished brass fixtures, the bespoke furniture, the curated art collection—while “Stay” evokes the sense of belonging, inviting travelers to pause, relax, and connect with the soul of Karachi. It’s a name that bridges grandeur with genuineness, promising that each guest will leave refreshed and enriched.
       </p>
     </div>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">Meet the Visionary: Muhammad Ilyas</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Meet the Visionary: Muhammad Ilyas</h3>
       <p class="text-lg leading-relaxed transition-transform duration-300">
-        Born into a close-knit Memon family, Sunni Muslim Muhammad Ilyas grew up hearing tales of entrepreneurship, perseverance, and faith. From a young age he dreamed of creating spaces that transcended lodging—places that became landmarks of cultural pride and social harmony. After years learning every facet of hospitality—from guesthouse housekeeping to boutique front-desk management—he returned to Lyari, determined to transform his childhood neighborhood.
+        Born into a close-knit Memon family, Muhammad Ilyas grew up hearing tales of entrepreneurship, perseverance, and faith. From a young age he dreamed of creating spaces that transcended lodging—places that became landmarks of cultural pride and social harmony. After years learning every facet of hospitality—from guesthouse housekeeping to boutique front-desk management—he returned to Lyari, determined to transform his childhood neighborhood.
       </p>
     </div>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">Family Legacy of Strength & Compassion</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Family Legacy of Strength & Compassion</h3>
       <p class="text-lg leading-relaxed transition-transform duration-300">
         <strong>Father:</strong> Muhammad Shabbir was a skilled carpenter whose meticulous craftsmanship taught Ilyas that every detail matters, from the grain of a wooden headboard to the warmth of a greeting at check-in.
       </p>
       <p class="text-lg leading-relaxed transition-transform duration-300">
-        <strong>Mother:</strong> Razia Bano, the family’s heartbeat, extended legendary hospitality in her home—her recipes for samosas and chai now inspire LuxuryStay’s in-room dining.
+        <strong>Mother:</strong> The family’s heartbeat, extended legendary hospitality in her home—her recipes for samosas and chai now inspire LuxuryStay’s in-room dining.
       </p>
       <p class="text-lg leading-relaxed transition-transform duration-300">
-        <strong>Grandmother:</strong> Zubaida Adam lived through tumultuous times and shared ancestral songs and remedies. Today, her handwritten notes adorn our lounge, honoring her wisdom and heritage.
+        <strong>Grandmother:</strong> Lived through tumultuous times and shared ancestral songs and remedies. Today, her handwritten notes adorn our lounge, honoring her wisdom and heritage.
       </p>
     </div>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">Journey of Migration</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Journey of Migration</h3>
       <p class="text-lg leading-relaxed transition-transform duration-300">
         In 1947, amid Partition, the family left their ancestral home in Gujarat, India, carrying little but faith. They settled in Lyari, forging new lives despite hardship. Their resilience now forms the bedrock of LuxuryStay—a proud symbol of triumph over adversity.
       </p>
     </div>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">Embracing Memon Traditions</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Embracing Memon Traditions</h3>
       <ul class="list-disc list-inside text-lg leading-relaxed transition-transform duration-300">
         <li><strong>Charitable Outreach:</strong> A portion of each booking supports local schools and clinics.</li>
         <li><strong>Community Engagement:</strong> Weekly Q&A breakfasts invite neighbors to share ideas.</li>
@@ -113,14 +113,14 @@
     </div>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">A Haven in Lyari</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">A Haven in Lyari</h3>
       <p class="text-lg leading-relaxed transition-transform duration-300">
         Inspired by Mughal motifs and contemporary minimalism, each suite bears a family virtue—“Patience,” “Compassion,” “Fortitude”—and handcrafted textiles. Rooftop gardens offer panoramic views of Karachi’s skyline, a tribute to the sunsets once seen from village courtyards.
       </p>
     </div>
 
     <div>
-      <h3 class="text-2xl font-semibold mb-2 transition-transform duration-300">Why LuxuryStay Matters</h3>
+      <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Why LuxuryStay Matters</h3>
       <p class="text-lg leading-relaxed transition-transform duration-300">
         LuxuryStay is more than a building; it’s a legacy:
         <ol class="list-decimal list-inside mt-2">
@@ -131,23 +131,36 @@
         </ol>
       </p>
     </div>
+  <div>
+    <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Meet the Partner: Muhammad Ayub</h3>
+    <p class="text-lg leading-relaxed transition-transform duration-300">
+      Muhammad Ayub, Ilyas’s childhood confidant, brings over a decade of financial expertise to LuxuryStay. Growing up together in Lyari, they shared dreams of uplifting their community. Ayub’s tenure at leading Karachi finance firms honed his skills in budgeting and strategic investment. His vision for LuxuryStay’s expansion and his meticulous financial planning have been pivotal in turning Ilyas’s dream into a sustainable reality. Today, as co-owner and Chief Financial Officer, Ayub ensures that LuxuryStay thrives economically while staying true to its community-driven mission.
+    </p>
+  </div>
+
+  <div>
+    <h3 class="text-2xl font-semibold mb-2 text-blue-600 transition-transform duration-300">Meet the Partner: Abdul Hadi</h3>
+    <p class="text-lg leading-relaxed transition-transform duration-300">
+      Abdul Hadi, a longtime friend and tech innovator, leads LuxuryStay’s digital and marketing initiatives. With a background in app development and digital strategy, Hadi crafted the hotel’s seamless booking platform and vibrant social media presence. His passion for storytelling through visuals and user-centric design reflects in every guest interaction online. As Chief Technology & Marketing Officer, Hadi blends innovation with hospitality, ensuring LuxuryStay remains at the forefront of guest engagement and brand experience.
+    </p>
+  </div>
   </section>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay</h2>
     </div>
-      <div class="overflow-hidden shadow-lg gallery-item">
+      <div class="overflow-hidden shadow-lg gallery-item px-5">
         <img src="/imagesandvideos/5.png" alt="Fine Dining"
-             class="w-full h-96  hover:scale-105 transition-transform duration-300">
+             class="w-full h-96 rounded hover:scale-105 transition-transform duration-300">
       </div>
-      <div class="overflow-hidden shadow-lg gallery-item">
+      <div class="overflow-hidden shadow-lg gallery-item px-5">
         <img src="/imagesandvideos/6.png" alt="Fine Dining"
-             class="w-full h-96  hover:scale-105 transition-transform duration-300">
+             class="w-full h-96 rounded hover:scale-105 transition-transform duration-300">
       </div>
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Rooms</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Rooms</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/1.jfif" alt="Luxury Room"
@@ -168,10 +181,10 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Gym</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Gym</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/gym_uncut.jpg" alt="Luxury Gym"
@@ -200,10 +213,10 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Restrooms</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Restrooms</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/bathroom_uncut.jpg" alt="Luxury Room"
@@ -224,10 +237,10 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay DineIn</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay DineIn</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/Dinein_uncut.jpg" alt="Luxury Room"
@@ -248,10 +261,10 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Kitchen</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Kitchen</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/kitchen_uncut.jpg" alt="Luxury Room"
@@ -272,10 +285,10 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Massageroom</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Massageroom</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/massage_uncut.jpg" alt="Luxury Room"
@@ -296,10 +309,10 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Steamroom</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Steamroom</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/steam_uncut.jpg" alt="Luxury Room"
@@ -320,10 +333,10 @@
       <!-- …more cards… -->
     </div>
 
-        <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Security</h2>
+        <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Security</h2>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4 p-5">
       <!-- Repeat these cards as needed -->
       <div class="overflow-hidden shadow-lg gallery-item">
         <img src="/imagesandvideos/security_cut.jpeg" alt="Luxury Room"
@@ -344,12 +357,12 @@
       <!-- …more cards… -->
     </div>
 
-    <div class="flex justify-center text-white gallery-item overflow-hidden">
-      <h2 class="text-4xl font-bold transition-transform duration-300">LuxuryStay Mosque</h2>
+    <div class="flex justify-center text-black gallery-item overflow-hidden">
+      <h2 class="text-4xl font-bold text-blue-600 transition-transform duration-300">LuxuryStay Mosque</h2>
     </div>
-      <div class="overflow-hidden shadow-lg gallery-item">
+      <div class="overflow-hidden shadow-lg gallery-item px-5">
         <img src="/imagesandvideos/prayer_cut.jpeg" alt="Fine Dining"
-             class="w-full h-96  hover:scale-105 transition-transform duration-300">
+             class="w-full h-96 rounded hover:scale-105 transition-transform duration-300">
       </div>
   </section>
 
