update forgot password

--- a/public/auth/reset-password.html
+++ b/public/auth/reset-password.html
@@ -21,13 +21,6 @@
     <form id="resetForm" class="space-y-4">
       <input
         type="password"
-        id="oldPassword"
-        placeholder="Old Password"
-        required
-        class="w-full px-4 py-2 border rounded-lg"
-      />
-      <input
-        type="password"
         id="newPassword"
         placeholder="New Password"
         required
@@ -56,7 +49,6 @@
     form.addEventListener('submit', async e => {
       e.preventDefault();
       const email = localStorage.getItem('forgotten');
-      const oldPassword = document.getElementById('oldPassword').value;
       const newPassword = document.getElementById('newPassword').value;
       const confirmPassword = document.getElementById('confirmPassword').value;
 
@@ -70,7 +62,7 @@
         const res = await fetch('/reset-password', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ email, oldPassword, newPassword }),
+          body: JSON.stringify({ email, newPassword }),
         });
         const data = await res.json();
         if (!res.ok) throw new Error(data.message);
